2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/29_if_else_cond_and_or.deca
// Description :
//     Test sur ifThenelse avce de condition complexe   
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024
{
    int x ;

    if(1>2 && 2 <= 1)
    {
        x = 1;
    }
    else if( 1!=3 || 2==2)
    {
        x = 2 ;
    }
    else 
    {
        x = 3 ;
    }
}