2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/44_lt_aff_int.deca
// Description :
//      affécation d'une comparasion dans un int  
// Resultats :
//    Erreur Contexteulle : ligne 10 : le boolean ne peut pas être affecté à int
//
// Historique :
// cree le 10/01/2024

{
    int x = 12 > 3 ;
}